reworked ContactList element + fixed delete button overflow

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
         @apply p-1;
     }
     .dropdown {
-        @apply transition-all ease-in-out overflow-hidden;
+        @apply transition-all ease-in-out;
     }
 }
 
